--- a/Pupa/storyboards/en.lproj/Main.storyboard
+++ b/Pupa/storyboards/en.lproj/Main.storyboard
@@ -70,11 +70,21 @@
         <!--MessagesController-->
         <scene sceneID="y0P-HX-I8h">
             <objects>
-                <tableViewController id="EWO-io-QNK" userLabel="MessagesController" customClass="MessangesController" customModule="Pupa" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="EWO-io-QNK" userLabel="MessagesController" customClass="MessagesController" customModule="Pupa" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="Tma-12-mI2">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="chat" id="tpS-6c-Nem">
+                                <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tpS-6c-Nem" id="uiD-E0-iqO">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="EWO-io-QNK" id="xgB-xA-hTW"/>
                             <outlet property="delegate" destination="EWO-io-QNK" id="1Ld-ro-Tkr"/>
@@ -82,7 +92,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Messages" id="c5d-g0-eIH">
                         <barButtonItem key="rightBarButtonItem" style="plain" id="8Af-Sf-ARi">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="VcI-0t-oL5">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="VcI-0t-oL5">
                                 <rect key="frame" x="277" y="5" width="100" height="34.333333333333336"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
@@ -94,7 +104,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="table" destination="Tma-12-mI2" id="4Qq-lJ-LTA"/>
+                        <outlet property="chatsTableView" destination="Tma-12-mI2" id="4Qq-lJ-LTA"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lMs-A3-6QQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
