--- a/Pupa/storyboards/en.lproj/Main.storyboard
+++ b/Pupa/storyboards/en.lproj/Main.storyboard
@@ -70,7 +70,7 @@
         <!--MessagesController-->
         <scene sceneID="y0P-HX-I8h">
             <objects>
-                <tableViewController id="EWO-io-QNK" userLabel="MessagesController" customClass="MessagesController" customModule="Pupa" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="EWO-io-QNK" userLabel="MessagesController" customClass="MessengerController" customModule="Pupa" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="Tma-12-mI2">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -98,7 +98,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="New"/>
                                 <connections>
-                                    <action selector="onNewMessageButtonClick" destination="EWO-io-QNK" eventType="touchUpInside" id="q3s-b5-sDh"/>
+                                    <action selector="onNewChatButtonClick" destination="EWO-io-QNK" eventType="touchUpInside" id="q3s-b5-sDh"/>
                                 </connections>
                             </button>
                         </barButtonItem>
